--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -41,6 +41,7 @@ jobs:
 
   docker-build:
     name: Build
+    needs: tests
     runs-on: ubuntu-latest
     steps:
     - name: Checkout de repositorio
